microservices/site-sensor-management/site-sensor-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-sensor-management-service
  labels:
    app: site-sensor-management
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3001'
    prometheus.io/path: '/actuator/prometheus'
spec:
  selector:
    app: site-sensor-management
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
