microservices/site-sensor-management/site-sensor-management-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-sensor-management-ingress
  namespace: green-energy-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: green-energy-tracker.site-sensor
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-sensor-management-service
                port:
                  number: 3001
